--- a/newindex.html
+++ b/newindex.html
@@ -148,5 +148,19 @@ Every day that passes, you’re constantly in my thoughts. I want to know more a
 <div style="margin-top: 20px; display: flex; justify-content: center;">
     <iframe style="border-radius:12px; margin-left: 200px;" src="https://open.spotify.com/embed/track/1bYRmNYrXbzbLq1CEBZHRe?utm_source=generator" width="300" height="500" frameBorder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 </div>
+<style>
+    html, body {
+        min-height: 100vh;
+        min-width: 100vw;
+        box-sizing: border-box;
+        overflow-x: hidden;
+    }
+    body {
+        width: 100vw;
+        height: 100vh;
+        max-width: 100vw;
+        max-height: 100vh;
+    }
+</style>
 </body>
 </html>
