--- a/newindex.html
+++ b/newindex.html
@@ -146,7 +146,9 @@ Every day that passes, you’re constantly in my thoughts. I want to know more a
 </script>
 <!-- Spotify Embed (autoplay, hidden controls) -->
 <div style="margin-top: 20px; display: flex; justify-content: center;">
-    <iframe style="border-radius:12px; margin-left: 100px;" src="https://open.spotify.com/embed/track/1bYRmNYrXbzbLq1CEBZHRe?utm_source=generator" width="300" height="500" frameBorder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <div style="position: absolute; top: 30px; left: 50%; transform: translateX(-50%); z-index: 10; width: 100%; display: flex; justify-content: center;">
+        <iframe style="border-radius:12px; width: 300px; height: 80px; display: block; margin: 0 auto;" src="https://open.spotify.com/embed/track/1bYRmNYrXbzbLq1CEBZHRe?utm_source=generator" frameBorder="0" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div>
 </div>
 <style>
     html, body {
